--- a/pages/docs/components/loader.mdx
+++ b/pages/docs/components/loader.mdx
@@ -2,8 +2,6 @@
 
 Animated spinner for loading states
 
-import InstallationGuide from '@components/shared/installation-guide.mdx'
-
 <InstallationGuide />
 
 import { LoaderExample, properties } from '@components/examples/loader'
@@ -14,7 +12,7 @@ import { ELEMENT_SIZES } from '@creation-ui/react'
 ```tsx copy
 import { Loader } from '@creation-ui/react'
 
-<Loader />
+;<Loader />
 ```
 
 <LoaderExample />
