feat: refactor TextArea to use InputBase, refactor TextArea docs

--- a/pages/docs/components/textarea.mdx
+++ b/pages/docs/components/textarea.mdx
@@ -1,90 +1,57 @@
-# TextArea
-
-import { TextAreaExample, properties } from '@components/examples/textarea'
+import {
+  TextAreaExample,
+  properties,
+  PasswordExample,
+  TextAreaPlayground,
+} from '@components/examples/textarea'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
+import { Icon } from '@mdi/react'
+import { mdiAccountOutline, mdiHelpCircle, mdiKeyVariant } from '@mdi/js'
+import { Playground } from '@components/playground'
+
+# TextArea
+
+The TextArea component provides a multi-line text input field, allowing users to input larger volumes of text. It supports various customizable features, such as different sizes, loading states, error states, and more, enabling it to adapt to different usage scenarios within your application.
+
+## Playground
+
+<Playground
+  config={{
+    name: 'TextArea',
+    size: true,
+    loading: true,
+    disabled: true,
+    readOnly: true,
+    error: true,
+    helperText: true,
+  }}
+>
+  <TextAreaPlayground label='TextArea' />
+</Playground>
+
+It's important to note that the TextArea component's width won't 'adjusts dynamically like [Input](/docs/components/input) because it has `resize` class and can be manually resized by dragging the bottom-right corner.
+If you prefer a fixed width or [different resize behaviour](https://tailwindcss.com/docs/resize), you can set this by providing custom width constraints, either through a wrapper component or by passing a class to the `className` prop.
+For example:
 
 ```tsx copy
-export const TextAreaExample = (props: Omit<TextAreaProps, 'onChange' | 'ref'>) => {
-  const [value, setValue] = useState('')
-
-  return (
-    <TextArea
-      //
-      onChange={e => setValue(e.target.value)}
-      value={value}
-      {...props}
-    />
-  )
-}
+// example with tailwindcss custom width
+<TextArea className='w-[200px] resize-y' />
 ```
-
-<Container>
-  <TextAreaExample label='TextArea' debug />
-</Container>
-
-As you may observe in this example the longer the content inside the TextArea component
-the longer it gets. To fix that you would need to provide your own **width** constraints
-either by a **custom wrapper** or passing class to `className` e.g.
-
-```tsx copy
-//example with tailwindcss custom width
-<TextArea className='w-[200px]' />
-```
-
-## Sizes
-
-This component supports `size` prop with values `sm`, `md`, `lg`:
-
-<UnfoldVariants
-  component={TextAreaExample}
-  variants={ELEMENT_SIZES}
-  prop='size'
-  nameProp='label'
-/>
-
-## States
-
-<Container variant='column'>
-  <TextAreaExample disabled label='Disabled' />
-  <TextAreaExample required label='Required' />
-  <TextAreaExample readOnly label='Read only' value="I'm read only" />
-  <TextAreaExample loading label='Loading' value='Loading' />
-</Container>
-
-## Error text
-
-<Container>
-  <TextAreaExample
-    error='This field is required'
-    label='Error'
-    value=''
-    required
-  />
-</Container>
-
-## Error text
-
-<Container>
-  <TextAreaExample
-    helperText='This field is required'
-    label='With helper text'
-    value='Hello world'
-  />
-</Container>
 
 ## Component API
+
+The TextArea component has several props available for customization, outlined in the props table below. In addition, it accepts all native props that are applicable to the HTML TextArea element:
 
 <PropsTable
   properties={properties}
   name='TextArea'
   description={
     <>
-      Rest of the props are the same as for the native <code>TextArea</code>{' '}
+      The rest of the props are the same as for the native <code>TextArea</code>{' '}
       component.
     </>
   }
 />
-
