--- a/pages/docs/components/loader.mdx
+++ b/pages/docs/components/loader.mdx
@@ -2,8 +2,6 @@
 
 Animated spinner for loading states
 
-<InstallationGuide />
-
 import { LoaderExample, properties } from '@components/examples/loader'
 import PropsTable from '@components/props-table'
 import { UnfoldVariants } from '@components/unfold-variants'
@@ -12,7 +10,7 @@ import { ELEMENT_SIZES } from '@creation-ui/react'
 ```tsx copy
 import { Loader } from '@creation-ui/react'
 
-;<Loader />
+<Loader />
 ```
 
 <LoaderExample />
