--- a/pages/docs/components/popover.mdx
+++ b/pages/docs/components/popover.mdx
@@ -2,6 +2,8 @@ import {
   PopoverPlaygroundControlled,
   PopoverPlaygroundUncontrolled,
   properties,
+  commonProperties,
+  popoverTriggerProperties,
 } from '@components/examples/popover'
 import PropsTable from '@components/props-table'
 
@@ -11,6 +13,8 @@ The Popover component is a flexible UI element that can be used to display addit
 Uses [@floating/ui](https://floating-ui.com/docs/popover).
 
 ## Playground
+
+The code in playgrounds is shortened for simplicity.
 
 Explore and experiment with the Popover component using the uncontrolled and controlled playgrounds below:
 
@@ -26,8 +30,78 @@ In the controlled variant, you can manage the open and close behavior of the Pop
 
 <PopoverPlaygroundControlled />
 
+### Full code example
+
+```tsx copy
+import {
+  ClearButton,
+  Popover,
+  PopoverClose,
+  PopoverContent,
+  PopoverDescription,
+  PopoverHeading,
+  PopoverTrigger,
+  Switch,
+} from '@creation-ui/react'
+
+export const PopoverExampleUncontrolled = () => {
+  return (
+    <Popover>
+      <PopoverTrigger>Open</PopoverTrigger>
+      <PopoverContent className='w-52'>
+        <PopoverHeading>Popover</PopoverHeading>
+        <PopoverDescription className='pt-2'>
+          In the uncontrolled variant, the open and close behavior of the
+          Popover is managed internally.
+        </PopoverDescription>
+        <br />
+        <PopoverClose>Dismiss</PopoverClose>
+      </PopoverContent>
+    </Popover>
+  )
+}
+```
+
 ## Component API
 
 For detailed configuration options, refer to the Popover API in the props table below:
 
-<PropsTable properties={properties} name='Popover' />
+<PropsTable
+  properties={properties}
+  name='Popover'
+  description={'Main wrapper component for the Popover feature.'}
+/>
+<PropsTable
+  properties={popoverTriggerProperties}
+  name='PopoverTrigger'
+  description={
+    'This component is required for uncontrolled approach and is used to trigger the Popover.'
+  }
+/>
+<PropsTable
+  properties={commonProperties}
+  name='PopoverContent'
+  description={
+    'This component is optional and can be used to present popover content.'
+  }
+/>
+<PropsTable
+  properties={commonProperties}
+  name='PopoverHeading'
+  description={
+    'This component is optional and can be used to provide a heading for the Popover.'
+  }
+/>
+
+<PropsTable
+  properties={commonProperties}
+  name='PopoverDescription'
+  description={
+    'This component is optional and can be used to provide additional information about the Popover.'
+  }
+/>
+<PropsTable
+  properties={commonProperties}
+  name='PopoverClose'
+  description={'Closing trigger'}
+/>
