--- a/pages/docs/components/tooltip.mdx
+++ b/pages/docs/components/tooltip.mdx
@@ -1,28 +1,25 @@
-import { Tooltip } from '@creation-ui/react'
-import { Container } from '@components/container'
+# Tooltip
+
 import {
   properties,
   TooltipExample,
   TooltipPlayground,
 } from '@components/examples/tooltip'
-import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { ListOrTypes } from 'utils/list-or-types'
-import { Callout } from 'nextra-theme-docs'
 
 <TooltipPlayground />
 
-## Position
+```tsx copy
+import { Button, Tooltip } from '@creation-ui/react'
 
-This component supports the `position` prop with values `left`, `top`, `bottom`, `right`.
-
-<UnfoldVariants
-  component={TooltipExample}
-  variants={['left', 'top', 'bottom', 'right']}
-  prop='position'
-  nameProp='content'
-/>
+export const Example = props => {
+  return (
+    <Tooltip content='Tooltip content' position='top'>
+      <Button variant='contained'>Submit</Button>
+    </Tooltip>
+  )
+}
+```
 
 ## Component API
 
