refactor: update Playground usage in Switch, TextArea, ToggleGroup, Drawer; change inputControlsSet to fn

--- a/pages/docs/components/switch.mdx
+++ b/pages/docs/components/switch.mdx
@@ -8,19 +8,9 @@ import PropsTable from '@components/props-table'
 import { properties } from '@components/examples/switch'
 import { Playground } from '@components/playground'
 
-<Playground
-  config={{
-    name: 'Switch',
-    disabled: true,
-    size: true,
-    readOnly: true,
-    error: true,
-    helperText: true,
-    content: true,
-  }}
->
-  <SwitchPlayground />
-</Playground>
+<SwitchPlayground />
+
+## Controlled example
 
 ```tsx copy
 import { Switch, SwitchProps } from '@creation-ui/react'
