--- a/pages/docs/components/radio.mdx
+++ b/pages/docs/components/radio.mdx
@@ -1,11 +1,15 @@
 # Radio
 
-import { RadioExample } from '@components/examples/radio'
+import { RadioPlayground } from '@components/examples/radio'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { properties } from '@components/examples/radio'
+
+<RadioPlayground />
+
+## Controlled example
 
 ```tsx copy
 import { Radio, RadioProps } from '@creation-ui/react'
@@ -16,29 +20,6 @@ export const RadioComponet = ({ ...props }: Omit<RadioProps, 'onChange'>) => {
   return <Radio onChange={setChecked} checked={checked} {...props} />
 }
 ```
-
-<Container>
-  <RadioExample label='Radio option' />
-</Container>
-
-## Sizes
-
-This component supports `size` prop with values `sm`, `md`, `lg`:
-
-<UnfoldVariants
-  component={RadioExample}
-  variants={ELEMENT_SIZES}
-  prop='size'
-  nameProp='label'
-/>
-
-## States
-
-<Container>
-  <RadioExample disabled label='Disabled' />
-  <RadioExample required label='Required' />
-  <RadioExample readOnly label='Read only' />
-</Container>
 
 ## Component API
 
