fix: callout docs

--- a/pages/docs/components/callout.mdx
+++ b/pages/docs/components/callout.mdx
@@ -5,6 +5,30 @@ import { properties, CalloutPlayground } from '@components/examples/callout'
 
 <CalloutPlayground />
 
+## Example
+
+```tsx copy
+import React from 'react'
+import { Callout } from '@creation-ui/react'
+import { mdiCheckCircle } from '@mdi/js'
+import { Icon } from '@mdi/react'
+
+export const Example = () => {
+  return (
+    <>
+      <Callout
+        variant={'outlined'}
+        status={'success'}
+        title='Action completed'
+        content='Your request has been processed successfully.'
+        icon={<Icon path={mdiCheckCircle} size={1} />}
+        onClose={() => alert('Callout closed')}
+      />
+    </>
+  )
+}
+```
+
 ## Component API
 
 <PropsTable
