refactor: chip and autocomplete

--- a/pages/docs/components/chip.mdx
+++ b/pages/docs/components/chip.mdx
@@ -1,25 +1,21 @@
-
-import { StatusBadge } from '@creation-ui/react'
+import { Chip } from '@creation-ui/react'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import {
-  properties,
-  StatusBadgePlayground,
-} from '@components/examples/status-badge'
+import { properties, ChipPlayground } from '@components/examples/chip'
 import { Playground } from '@components/playground'
 
-# Status Badge
+# Chip
 
 ## Playground
 
-<StatusBadgePlayground />
+<ChipPlayground />
 
 ## Component API
 
 <PropsTable
   properties={properties}
-  name='StatusBadge'
-  description='StatusBadge component props.'
+  name='Chip'
+  description='Chip component props'
 />
