--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -62,7 +62,7 @@ To install Creation UI, run command below:
 - [x] [Radio Group](/docs/components/radio-group)
 - [x] [Radio](/docs/components/radio)
 - [x] [Select](/docs/components/select)
-- [x] [Status Badge](/docs/components/status-badge)
+- [x] [Status Badge](/docs/components/chip)
 - [x] [Switch](/docs/components/switch)
 - [x] [Table](/docs/components/table)
 - [x] [TextArea](/docs/components/textarea)
