--- a/pages/docs/components/autocomplete.mdx
+++ b/pages/docs/components/autocomplete.mdx
@@ -21,11 +21,11 @@ Let's dive in and see the Autocomplete component in action:
 
 ## Autocompleteing multiple options
 
-With the multiple prop, the Autocomplete component allows for the selection of multiple options, providing a dynamic and versatile user experience.
+With the `multiple` prop, the Autocomplete component allows for the selection of multiple options, providing a dynamic and versatile user experience.
 
 <AutocompleteMultiPlayground />
 
-In the multiple mode, the value and onChange props adjust their signature as follows:
+In the `multiple` mode, the `value` and `onChange` props adjust their signature as follows:
 
 | Property | `!multiple` | `multiple`    |
 | -------- | ----------- | ------------- |
@@ -34,13 +34,55 @@ In the multiple mode, the value and onChange props adjust their signature as fol
 
 For more details, please refer to the [properties table.](#onChange)
 
-## Custom Option and SelectedOption components
+## Option and selection customization
 
 Enhance your Autocomplete experience by using custom Option and SelectedOption components. This provides the flexibility to design and style options according to your application's needs and aesthetics.
 
 <Container>
   <AutocompleteExampleCustomOptions />
 </Container>
+
+Below is an example of a custom `renderOption` and `renderSelection` functions.
+
+Notice that `props` of `renderOption` carry `className` that has all interaction on hover and focus.
+You can either preserve this like in example or skip altogether if you want to have your own styles for things like `selected`, `hover` or `disabled`.
+Please refer to type definition to find out what you can base your styles on.
+
+Highlighting of search term is lost in custom option component, but you can implement it yourself, e.g. using [react-highlight-words](https://github.com/bvaughn/react-highlight-words) library.
+
+```tsx
+type Character = {
+  id: string
+  name: string
+  image: string
+  species: string
+  //... other fields
+}
+
+const renderOption = (props: AutocompleteOptionProps, option: Character) => (
+  <div {...props} className={clsx(props.className, 'h-fit w-fit p-2')}>
+    <div className='flex gap-2 items-center'>
+      <Avatar size='sm' src={option.image} />
+      <div className='flex flex-col'>
+        <span className='font-medium'>{option.name}</span>
+        <span className='text-info-500 text-xs'>{option.species}</span>
+      </div>
+    </div>
+  </div>
+)
+
+const renderSelection = (option: Character) => (
+  <div className='h-fit w-fit p-2 mr-2'>
+    <div className='flex gap-2 items-center'>
+      <Avatar size='sm' src={option.image} />
+      <div className='flex flex-col'>
+        <span className='font-medium'>{option.name}</span>
+        <span className='text-info-500 text-xs'>{option.species}</span>
+      </div>
+    </div>
+  </div>
+)
+```
 
 ## Component API
 
